--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "luxon": "^3.0.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
